<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="74dp"
    tools:context="com.yapita.app.TabCostumbresCentroFragment" >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/barra_delgada_negra"
            android:gravity="top" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/barra_transparente"
            android:gravity="top" >

            <TextView
                android:id="@+id/lblPlatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_platos"
                android:textColor="@color/amarillo"
                android:textSize="20sp"
                android:onClick="verPlatos"
                 />

            <TextView
                android:id="@+id/lblBebidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_bebidas"
                android:textColor="@color/blanco"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblPostres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_postres"
                android:textColor="@color/blanco"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
